errorsample/sample1.txt
practice0.c:5:14: error: expected ';' after expression
printf("jjj")
             ^
             ;
1 error generated.